primeiro Ajax pronto

--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -1,16 +1,13 @@
-﻿@model IEnumerable<Oficial3.Models.Pecas>
+﻿@model Oficial3.Models.Pecas
 @{
     ViewBag.Title = "CATÁLOGO - Cliente";
 }
 <body>
 
-    @foreach (var item in Model)
-    {
-        <p><label>Nome : </label> @item.nome_Pecas</p>
-        <p><label>Preço : </label> @item.preco_Pecas</p>
-        <p><label>Categoria : </label> @item.tipo</p>
+        <p><label>Nome : </label> @Model.nome_Pecas</p>
+        <p><label>Preço : </label> @Model.preco_Pecas</p>
+        <p><label>Categoria : </label> @Model.tipo</p>
 
-    }
 </body>
 
 
