--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -3,9 +3,9 @@
 @{
     ViewBag.Title = "Login";
 }
-
+<link href="~/Content/login.css" rel="stylesheet" />
 <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-<link href="~/Content/login_estilo.css" rel="stylesheet" />
+
 <style>
     .field-validation-error {
         color: red;
