--- a/Views/Catalogo/IndexAjaxCatalogo.cshtml
+++ b/Views/Catalogo/IndexAjaxCatalogo.cshtml
@@ -8,28 +8,33 @@
 
 @foreach (var item in Model)
 {
-    <tr>
-        <td>@item.nome_Pecas</td>
-        <td><a href="#" data-toggle="popover" data-trigger="hover" id="@item.nome_Pecas">@item.preco_Pecas</a></td>
-    </tr>
+    <ul>
+        <li>@item.nome_Pecas</li>
+        <li><a href="#" data-toggle="popover" data-trigger="hover" data-id="@item.id_Pecas" id="@item.nome_Pecas">@item.preco_Pecas</a></li>
+    </ul>
+    @*<tr>
+            <td>@item.nome_Pecas</td>
+            <td><a href="#" data-toggle="popover" data-trigger="hover" data-id="@item.id_Pecas" id="@item.nome_Pecas">@item.preco_Pecas</a></td>
+        </tr>*@
 }
 
 <script src="~/Scripts/jquery-3.3.1.min.js"></script>
 
 <script>
     $(document).ready(function () {
-        $('[data-toggle="popover"]').popover({
-            title: setData,
-            html: true,
-            placement:'right'
-        });
+        $('a[data-toggle]').hover(function () {
+            $('[data-toggle="popover"]').popover('destroy');
+            $('[data-toggle="popover"]').popover({
+                title: setData($(this).attr('data-id')),
+                html: true,
+                placement: 'right'
+            });
+        })
         function setData(id) {
             var set_data = '';
-            var element = $(this);
-            var id = element.attr("id");
             $.ajax({
-                url: "?id" + id,
-                method: "post",
+                url: "https://localhost:44382/Catalogo/Catalogo?id=" + id,
+                method: "Get",
                 async: false,
                 data: { id: id },
                 success: function (data) {
