--- a/Views/Catalogo/Catalogo.cshtml
+++ b/Views/Catalogo/Catalogo.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Oficial3.Models.Pecas
 @{
     ViewBag.Title = "CATÁLOGO - Cliente";
-}
+} 
 <body>
 
         <p><label>Nome : </label> @Model.nome_Pecas</p>
         <p><label>Preço : </label> @Model.preco_Pecas</p>
-        <p><label>Categoria : </label> @Model.tipo</p>
+        <p><label>Categoria : </label> @Model.Tipo1.descricao</p>
 
 </body>
 
